# eidolon-agent-memory

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  MCP_TOOLS_REFERENCE.md  QUICK_REFERENCE.md  README.md  alembic.ini  docker-compose.yml  ember_results_latest.json  ember_tier1_latest.json  ember_tier2_latest.json  ember_tier3_latest.json  init.sql  pyproject.toml  test_adapter.py  test_extract_simple.py  test_extraction.py  test_full_integration.py  test_get_facts.py  test_single_search.py  test_smoke.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_user_name.py
docs/: ARCHITECTURE.md  COGNITIVE_GENERATION_GUIDE.md  FACT_EXTRACTION_BEST_PRACTICES.md  GRACEFUL_OMISSION_GUIDE.md  INTENT_BASED_RETRIEVAL_GUIDE.md  LM_STUDIO_DEFAULT_SYSTEM_PROMPT.md  TWO_WAY_MEMORY_GUIDE.md  USER_PROFILE_GUIDANCE.md
docs/evals/: BENCHMARK_RUN_TRACKER.md  BENCHMARK_SCORE_SUMMARY.md  EVALS_BENCHMARK_PLAN.md
docs/evals/artifacts/: ember_20260418T212458Z.json  ember_20260418T213010Z.json  ember_20260418T213946Z.json  ember_20260418T214543Z.json  ember_20260419T154717Z.json  ember_20260419T161046Z.json  ember_20260420T043941Z.json  ember_20260420T045001Z.json  ember_20260420T045824Z.json  ember_20260420T050504Z.json  locomo_20260418T212458Z.run.json  locomo_20260418T213010Z.run.json  locomo_20260418T213900Z.run.json  locomo_20260418T214423Z.run.json  (+36 more)
scripts/evals/: README.md  benchmark_harness.py  mcp_memory_eval.py  run_locomo.py  run_longmemeval.py  run_memory_benchmarks.py
src/eidolon_agent_memory/: __init__.py  __main__.py  server.py
(+35 files in other folders)
