[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eidolon-agent-memory"
version = "0.1.0"
description = "Companion cognitive memory platform — MCP server"
requires-python = ">=3.12"
dependencies = [
    # MCP
    "mcp[cli]>=1.6.0",
    # Web / async
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "starlette>=0.41.0",
    "httpx>=0.27.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "alembic>=1.13.0",
    # Validation / config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Auth
    "argon2-cffi>=23.1.0",
    # LLM / embeddings
    "openai>=1.35.0",
    # Scheduling
    "apscheduler>=3.10.4",
    "croniter>=2.0.0",
    # Utils
    "python-dateutil>=2.9.0",
    "pytz>=2024.1",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]
local-embeddings = [
    "sentence-transformers>=3.0.0",
]

[project.scripts]
eidolon-agent-memory = "eidolon_agent_memory.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/eidolon_agent_memory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
